# CategoryMapManager

./: .gitignore  BUILD_RELEASE.md  CHANGELOG.md  README.md  项目说明.md
.github/workflows/: build.yml
Example/: theme.json  themedvb.json
app/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/src/: App.vue  main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/assets/: main.css
app/src/components/: BulkInsertForm.vue  DirectoryPicker.vue  MappingTable.vue
app/src/stores/: mappingStore.ts
app/src/types/: mapping.ts
