[package]
name = "add-column-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = [ "dialog-ask", "dialog-save", "fs-all", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
